# cMinja

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/lightweight-yaml-parser/: LICENSE  yaml.hpp
src/: main.cpp
test/: chatml.m2  simple.json
